--- a/spring-boot-starter-mybatis-flex/pom.xml
+++ b/spring-boot-starter-mybatis-flex/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.2.8</version>
+        <version>1.2.9</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -40,5 +40,18 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.mybatis-flex</groupId>
+            <artifactId>mybatis-flex-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
