--- a/spring-boot-starter-web/pom.xml
+++ b/spring-boot-starter-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.2.11</version>
+        <version>1.2.12</version>
     </parent>
 
     <groupId>com.guanmengyuan.spring-ex</groupId>
@@ -46,7 +46,7 @@
             <artifactId>spring-ex-common-model</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
     </dependencies>
