--- a/spring-ex-common-model/pom.xml
+++ b/spring-ex-common-model/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.guanmengyuan</groupId>
         <artifactId>spring-ex</artifactId>
-        <version>1.2.11</version>
+        <version>1.2.12</version>
     </parent>
     <groupId>com.guanmengyuan.spring-ex</groupId>
     <artifactId>spring-ex-common-model</artifactId>
@@ -21,7 +21,7 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.dromara.hutool</groupId>
+            <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
         <dependency>
