--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>1.2.11</version>
+    <version>1.2.12</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -32,7 +32,7 @@
     </scm>
 
     <properties>
-        <revision>1.2.11</revision>
+        <revision>1.2.12</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -44,9 +44,9 @@
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--        spring end-->
 
-        <mybatis-flex.version>1.7.0</mybatis-flex.version>
+        <mybatis-flex.version>1.7.1</mybatis-flex.version>
         <mybatis.version>3.0.2</mybatis.version>
-        <hutool.version>6.0.0-M7</hutool.version>
+        <hutool.version>5.8.22</hutool.version>
         <knife4j.version>4.3.0</knife4j.version>
         <therapi.version>0.15.0</therapi.version>
         <alipay.version>2.2.3</alipay.version>
@@ -100,7 +100,7 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.dromara.hutool</groupId>
+                <groupId>cn.hutool</groupId>
                 <artifactId>hutool-bom</artifactId>
                 <version>${hutool.version}</version>
                 <type>pom</type>
