--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>1.2.18</version>
+    <version>1.2.19</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,7 +33,7 @@
     </scm>
 
     <properties>
-        <revision>1.2.18</revision>
+        <revision>1.2.19</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -41,7 +41,7 @@
         <!--        spring start-->
         <spring-boot.version>3.1.5</spring-boot.version>
         <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <spring-cloud-tencent.version>1.12.3-2022.0.4</spring-cloud-tencent.version>
+        <spring-cloud-tencent.version>1.12.4-2022.0.4</spring-cloud-tencent.version>
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         <!--        spring end-->
 
@@ -51,12 +51,13 @@
         <knife4j.version>4.3.0</knife4j.version>
         <therapi.version>0.15.0</therapi.version>
         <alipay.version>2.7.10.ALL</alipay.version>
-        <wx-java.version>4.5.5.B</wx-java.version>
+        <alipay-easy.version>2.2.3</alipay-easy.version>
+        <wx-java.version>4.5.6.B</wx-java.version>
         <dubbo.version>3.2.7</dubbo.version>
         <sentinel.version>1.8.6</sentinel.version>
         <sa-token.version>1.37.0</sa-token.version>
         <forest.version>1.5.33</forest.version>
-        <aws.version>2.21.9</aws.version>
+        <aws.version>2.21.17</aws.version>
         <springdoc.version>2.2.0</springdoc.version>
         <flowable.version>7.0.0</flowable.version>
         <!--        build start-->
@@ -64,7 +65,7 @@
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
-        <maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.6.2</maven-javadoc-plugin.version>
         <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <!--        build end-->
@@ -144,13 +145,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
-
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
-                <version>${springdoc.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -173,6 +167,11 @@
                 <groupId>com.alipay.sdk</groupId>
                 <artifactId>alipay-sdk-java-v3</artifactId>
                 <version>${alipay.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alipay.sdk</groupId>
+                <artifactId>alipay-easysdk</artifactId>
+                <version>${alipay-easy.version}</version>
             </dependency>
             <!--            wechat-->
             <dependency>
@@ -226,11 +225,6 @@
             <dependency>
                 <groupId>com.guanmengyuan.spring-ex</groupId>
                 <artifactId>spring-ex-common-model</artifactId>
-                <version>${revision}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.guanmengyuan.spring-ex</groupId>
-                <artifactId>spring-boot-starter-webflux</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
